<resources>
    <string name="app_name">Card Inventory Manager</string>
    <string name="action_settings">Settings</string>
    <string name="action_admin">Admin</string>
    <string name="action_search">Search</string>
    <string name="binder_view">Binder View</string>
    <string name="single_view">Single View</string>
    <string name="camera_view">Camera View</string>
    <string name="settings_view">Settings</string>
    <string name="title_activity_capture">Card Inventory Manager</string>
    <string name="title_activity_capture_data">Card Inventory Manager</string>
    <string name="title_activity_binder">Card Inventory Manager</string>
    <string name="company_hint">Company</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="team_name_hint">Team Name</string>
    <string name="position_hint">Position</string>
    <string name="condition_hint">Condition</string>
    <string name="value_hint">Value</string>
    <string name="year_hint">Year</string>
    <string name="notes_hint">Notes</string>
    <string name="capture_image_header">Enter the Card Data</string>
    <string name="capture_image_header_edit">Edit the Card Data</string>
    <string name="search_header">Enter Search Data</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="enter_notes_button">Notes...</string>
    <string name="save_button">Save</string>
    <string name="search_button">Search</string>
    <string name="add_notes_title">Add Card Notes</string>
    <string name="add_notes_hints">Notes</string>
    <string name="extra_unique_id">net.leseonline.extra_unique_id</string>
    <string name="title_activity_single_card">SingleCardActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="card_num">Card #</string>

    <string name="single_card_view">Single Card View</string>
    <string name="multi_view">Multi-Card View</string>
    <string name="enter_data_view">Enter Data</string>
    <string name="edit_data_view">Edit Data</string>
    <string name="search_settings">Search</string>

    <string name="enter_admin_pw">Enter Admin Password</string>
    <string name="admin_pw">Admin Password</string>

    <string name="settings">Settings</string>
    <string name="haptics">Haptics</string>
    <string name="sound">Sound</string>
    <string name="messaging">Messaging</string>

    <string name="sort_order">Sort Order</string>
    <string name="player_name">Player Name</string>
    <string name="team_name">Team Name</string>
    <string name="value">Value</string>
    <string name="year">Year</string>
    <string name="condition">Condition</string>
    <string name="company">Company</string>

    <string name="mine">yomomma</string>

    <string name="take_picture">Take Picture</string>

    <string name="clear">Clear</string>
    <string name="search_first_name_hint">(use * for wildcard)</string>
    <string name="search_last_name_hint">(use * for wildcard)</string>
    <string name="search_team_name_hint">(use * for wildcard)</string>
    <string name="search_company_hint">(use * for wildcard)</string>

    <string name="lightning">Natural Lightning</string>
    <string name="color_baloons">Color Baloons</string>
    <string name="natural_wall">Natural Wall</string>
    <string name="title_activity_capture_photo">CapturePhotoActivity</string>
    <string name="no_card">No Card</string>
</resources>
