<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_header"
            android:gravity="center"
            android:textSize="12pt"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_first_name_hint"
            android:id="@+id/first_name_edit"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_last_name_hint"
            android:id="@+id/last_name_edit"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_team_name_hint"
            android:id="@+id/team_edit"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/position_hint"/>
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position_hint"
            android:id="@+id/position_spinner" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/condition_hint"/>
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/condition_hint"
            android:id="@+id/condition_spinner" />
<!--        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value_hint"
            android:inputType="numberDecimal"
            android:id="@+id/value_edit"/> -->
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_company_hint"
            android:id="@+id/company_edit"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year_hint"
            android:inputType="number"
            android:id="@+id/year_edit"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cancel_button"
                android:text="@string/cancel_button"
                android:backgroundTint="#f64848"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/clear_button"
                android:text="@string/clear"
                android:backgroundTint="#e3cf5d"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/search_button"
                android:text="@string/search_button"
                android:textColor="@android:color/black"
                android:backgroundTint="#5bb818"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>