<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.leseonline.cardinventorymanager.MainActivity"
    tools:showIn="@layout/activity_main"
              android:orientation="vertical">
<!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:layout_gravity="center_horizontal"
        android:textSize="14pt"/> -->
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:layout_centerInParent="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:paddingBottom="30dp">

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="0"
            android:layout_row="0"
            android:src="@drawable/bc1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/single_view"
            android:id="@+id/card_view" />

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="1"
            android:layout_row="0"
            android:src="@drawable/binder"
            android:contentDescription="@string/binder_view"
            android:scaleType="fitXY"
            android:id="@+id/binder_view" />

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="0"
            android:layout_row="1"
            android:src="@drawable/camera"
            android:scaleType="fitXY"
            android:contentDescription="@string/camera_view"
            android:id="@+id/camera_view" />

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="1"
            android:layout_row="1"
            android:src="@drawable/settings"
            android:scaleType="fitXY"
            android:contentDescription="@string/settings_view"
            android:id="@+id/settings_view" />

    </GridLayout>
</RelativeLayout>
